--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -74,6 +74,20 @@ body {
   width: 25px;
   object-fit: cover; }
 
+.numberOfItem {
+  position: absolute;
+  left: 25px;
+  top: 2px;
+  width: 18px;
+  height: 18px;
+  text-align: center;
+  background-color: red;
+  border-radius: 15px;
+  color: white;
+  font-size: 13px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 700; }
+
 .cart-box {
   height: 30px;
   width: 30px; }
@@ -99,7 +113,7 @@ body {
   border: 1px solid black;
   width: auto;
   max-height: 600px;
-  top: 60px;
+  top: 54px;
   right: 0;
   z-index: 2;
   visibility: hidden; }
@@ -143,7 +157,8 @@ body {
 .order-infor span {
   font-size: 17px;
   font-weight: 400;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: 5px; }
 
 .order-quanti {
   text-align: center; }
@@ -168,9 +183,17 @@ body {
   display: flex;
   justify-content: center; }
 
-.checkout span {
+.checkout .preview {
   padding: 15px 80px;
   background-color: black;
+  color: white;
+  font-size: 16px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  cursor: pointer; }
+
+.checkout span {
+  padding: 15px 80px;
+  background-color: chartreuse;
   color: white;
   font-size: 16px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -728,3 +751,116 @@ body {
 
 .checked {
   color: orange; }
+
+.order-container {
+  display: flex;
+  margin: 0 50px; }
+
+.order-image {
+  width: 100px;
+  height: 100px;
+  object-fit: cover; }
+
+.payment-box {
+  padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+  width: 900px;
+  background-color: white; }
+
+.sectionName {
+  font-size: 20px;
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 700; }
+
+.soft {
+  font-size: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: black;
+  font-weight: 600; }
+
+.buyerInformation {
+  display: flex;
+  justify-content: space-between; }
+
+.buyerInformation input {
+  width: 400px; }
+
+.buyerInformation .info {
+  display: flex;
+  flex-direction: column; }
+
+.rowContainer {
+  margin-top: 30px; }
+
+.columnContainer {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column; }
+
+input {
+  font-size: 20px;
+  height: 30px;
+  padding: 5px;
+  border: 1px solid gainsboro; }
+
+::placeholder {
+  font-size: 15px;
+  color: gray; }
+
+.checkbox-section {
+  display: flex; }
+
+.checkbox {
+  margin: 6px 0;
+  width: 15px;
+  height: 15px; }
+
+.checkboxName {
+  margin-left: 10px;
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 600; }
+
+.cart-information {
+  margin-left: 15px;
+  display: flex;
+  flex-direction: column;
+  background-color: white; }
+
+.cart-information .sectionName {
+  margin: 20px; }
+
+.order-box {
+  border-top: 1px solid gainsboro;
+  display: flex;
+  padding: 5px;
+  margin: 0 25px; }
+
+.order-information {
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px; }
+
+.order-wrapper {
+  height: 450px; }
+
+.order-information .name-tag {
+  font-weight: 300; }
+
+.subtotal-checkout {
+  border-top: 1px solid gainsboro;
+  margin: 25px;
+  padding-top: 20px; }
+
+.subtotal-checkout span {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px; }
+
+.subtotal-checkout .total {
+  font-weight: 500;
+  font-size: 25px; }
