--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -4,28 +4,16 @@ body {
   padding: 0;
 }
 
-#header {
-  height: auto;
-  width: 100%;
-  background-color:white;
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 0.5px solid gainsboro; ;
-  
-}
-
 .top-space {
   height: 30px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
   background-color: black;
 }
 
-.top-most div {
-  color: white;
-  font-size: 25px;
-  padding: 2px;
+#header {
+  background-color:white;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 0.5px solid gainsboro;
 }
 
 .logo-img {
@@ -35,17 +23,14 @@ body {
 }
 
 #club-name {
-  width: auto;
   font-size: 20px;
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 }
 
 .left-header {
   width: 150px;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
@@ -56,17 +41,13 @@ body {
 
 .right-wrapper {
   position: relative;
-  max-height: auto;
   margin:30px 100px;
 }
 
 .right-header {
-  position: relative;
   cursor: pointer;
   display: flex;
   align-items: center;
-  height: auto;
-  width: auto;
   border: 1px solid black;
   padding: 10px;
   transition: 0.2s;
@@ -100,7 +81,6 @@ body {
   font-size: 13px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 700;
-  
 }
 
 .cart-box {
@@ -131,7 +111,6 @@ body {
   position: absolute;
   background-color: white;
   border: 1px solid black;
-  width: auto;
   max-height: 600px;
   top: 54px;
   right: 0;
@@ -214,7 +193,6 @@ body {
 
 .checkout {
   margin-bottom: 10px;
-  width: 100%;
   display: flex;
   justify-content: center;
 }
@@ -237,16 +215,12 @@ body {
   cursor: pointer;
 }
 
-
-
 /* end of header section */
 
 .navbar-container {
   position:sticky;
   top: 0;
   z-index: 1;
-  width: 100%;
-  height: auto;
   background-color: whitesmoke;
   display: flex;
   margin-bottom: 20px;
@@ -280,11 +254,6 @@ body {
   
 }
 
-/* link for image icon */
-
-
-/*  */
-
 .dropdown-list {
   padding: 0;
   margin: 0;
@@ -310,44 +279,67 @@ body {
 .dropdown-list li:hover {
   background-color: gainsboro;
 }
-/* ------------------------------------------- */
 
 .slider-wrapper {
-  position: relative;
-  max-width: 60rem;
+  max-width: 80rem;
   margin: 0 auto;
+  border: 20px solid white;
 }
+
 
 .slider {
   display: flex;
   aspect-ratio: 16 / 9;
-  overflow-x: auto;
+  overflow-x: hidden;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
-  border-radius: 10px;
+}
+
+.slider::-webkit-scrollbar {
+  display: none;
 }
 
 .slider img {
   flex: 1 0 100%;
-  scroll-snap-align: start;
   object-fit: cover;
+  animation: slide 16s infinite;
 }
 
-.slider-nav {
-  display: flex;
-  column-gap: 1rem;
-  position: absolute;
-  bottom: 1.25rem;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 1;
+@keyframes slide {
+  0% {
+    transform: translateX(0);
+  }
+  
+  25% {
+    transform: translateX(0);
+  }
+
+  30% {
+    transform: translateX(-100%);
+  }
+
+  50% {
+    transform: translateX(-100%);
+  }
+
+  55% {
+    transform: translateX(-200%);
+  }
+
+  75% {
+    transform: translateX(-200%);
+  }
+
+  80% {
+    transform: translateX(-300%);
+  }
+
+  100% {
+    transform: translateX(-300%);
+  }
+
 }
 
-.slider-nav a {
-  width: 0.5rem;
-  height: 0.5rem;
-  border-radius: 50%;
-}
 
 .route-link {
   text-decoration: none;
@@ -361,16 +353,12 @@ body {
 }
 
 .Anounce {
-  width: auto;
-  height: auto;
   display: flex;
   justify-content: center;
 
 }
 
 .Anounce span {
-  width: auto;
-  height: auto;
   font-size:x-large;
   background-color: red;
   color: white;
@@ -382,7 +370,6 @@ body {
 
 .products-section {
   width: 100%;
-  height: auto;
 }
 
 .products-container {
@@ -394,14 +381,11 @@ body {
 }
 
 .products-box {
-  width: auto;
-  height: 100%;
   margin: 0 100px;
   background-color: whitesmoke;
 }
 
 .products-header {
-  width: 100%;
   height: 60px;
 }
 
@@ -415,7 +399,6 @@ body {
 }
 
 .onsale-item {
-  height: auto;
   width: 300px;
   margin: 20px;
   background-color: white;
@@ -439,38 +422,19 @@ body {
 }
 
 .product-info {
-  position: relative;
-  height: auto;
   width: 100%;
   background-color: black;
   display: flex;
   flex-direction: column;
-  cursor: pointer;
 }
 
 .product-info span{
   text-align: center;
   padding: 5px 20px;
   font-size: 25px;
-  width: auto;
-  height: auto;
   color: white;
 }
 
-.product-info span::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  padding: 20px 20px;
-  background-color: red;
-  color: White;
-  content: "THÊM VÀO GIỎ";
-  transition: transform 200ms ease-in-out;
-  transform: scaleX(0);
-  transform-origin: left;
-}
 
 .product-info span:hover::after {
   transform: scaleX(1);
@@ -479,25 +443,19 @@ body {
 
 .ad-wrapper {
   width: 100%;
-  height: auto;
 }
 
 .ad-box {
   margin: 0 100px;
   background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/images/banners/woman-workout-laptop.jpg);
   height: 50rem;
-  width: auto;
   display: flex;
   flex-direction: column;
 }
 
-.spacer {
-  height: 20rem;
-  width: auto;
-}
 
 .headline-box {
-  width: auto;
+  padding-top: 20rem;
   height: 40rem;
   display: flex;
   flex-direction: column;
@@ -512,15 +470,12 @@ body {
 
 .catcher {
   padding: 10px 30px;
-  width: auto;
   font-size:25px;
   color: white;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .learn-more-box {
-  width: 100%;
-  height: auto;
   display: flex;
   margin: 20px 30px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -528,9 +483,7 @@ body {
 
 .learn-more {
   padding: 10px 30px;
-  width: auto;
-  height: auto;
-  font-size:25px;
+  font-size: 25px;
   color: black;
   background-color: white;
   cursor: pointer;
@@ -546,13 +499,9 @@ body {
 
 .footer-wrapper {
   margin-top: 5rem;
-  width: 100%;
-  height: auto;
 }
 
 .footer-box {
-  width: auto;
-  height: auto;
   background-color:rgb(5, 5, 5);
 }
 
@@ -567,7 +516,6 @@ body {
 .contact-wrapper {
   margin-top: 40px;
   width: 300px;
-  height: auto;
 }
 
 .contact-text span {
@@ -595,8 +543,6 @@ body {
 
 .submit-button {
   position: absolute;
-  width: auto;
-  height: auto;
   top: 0;
   bottom: 0;
   right: 0;
@@ -616,7 +562,6 @@ body {
 .social-media-wrapper {
   margin-top: 40px;
   width: 400px;
-  height: auto;
 }
 
 .social-media-header {
@@ -627,8 +572,6 @@ body {
 
 .platform-wrapper {
   padding: 0;
-  width: auto;
-  height: auto;
   display: flex;
   justify-content:center ;
 }
@@ -653,11 +596,6 @@ body {
   object-fit: cover;
 }
 
-.about-us-wrapper {
-  width: auto;
-  height: auto;
-}
-
 .aboutlist-wrapper {
   padding: 0;
 }
@@ -673,7 +611,6 @@ body {
 }
 
 .about-us-header-wrapper {
-  width: 100%;
   text-align: start;
   margin-top: 40px;
 }
@@ -692,8 +629,6 @@ body {
 }
 
 .product-list {
-  width: auto;
-  height: auto;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
@@ -743,14 +678,11 @@ body {
 }
 
 .fun-fact {
-  width: auto;
-  height: auto;
   margin: 46px;
 }
 
 .title-container {
   width: 300px;
-  height: auto;
   text-align: center;
 }
 
@@ -797,7 +729,6 @@ body {
   transform: translate(-50%, -50%) scale(0);
   background: white;
   width: 800px;
-  height: auto;
   z-index: 2;
   padding: 20px;
   box-sizing: border-box;
