--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -1,10 +1,10 @@
 <section class="container">
   <div class="slider-wrapper">
     <div class="slider">
-      <img id="slider-1"
-        src="https://www.bodyweightmuscle.com/wp-content/uploads/2020/04/CALISTHENICS-COMPLETE-BEGINNER-GUIDE-FINAL.jpg" />
-      <img id="slider-2" src="https://katiecouric.com/wp-content/uploads/2021/12/KCM_WorkoutAffiliate.jpg" />
-      <img id="slider-2" src="https://www.bodybuilding.com/images/merch/550boxes/05-29-flyout-fatburner.jpg" />
+      <img src="https://www.bodyweightmuscle.com/wp-content/uploads/2020/04/CALISTHENICS-COMPLETE-BEGINNER-GUIDE-FINAL.jpg" />
+      <img src="https://katiecouric.com/wp-content/uploads/2021/12/KCM_WorkoutAffiliate.jpg" />
+      <img src="https://www.bodybuilding.com/images/merch/550boxes/05-29-flyout-fatburner.jpg" />
+      <img src="https://static.independent.co.uk/2023/01/04/16/womes%20active%20wear%20indybest%20copy-1.jpg" />
     </div>
 </section>
 
@@ -47,7 +47,6 @@
   <div>
     <div class="ad-wrapper">
       <div class="ad-box">
-        <div class="spacer"></div>
         <div class="headline-box">
           <span class="headline">ONLINE COACHING</span>
           <span class="catcher">độ dáng tại nhà hiệu quả với đội ngũ huấn luyện tận tâm</span>
