--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -8,7 +8,7 @@
       </div>
     </div>
   </a>
-  <div class="right-wrapper" style="display: flex">
+  <div class="right-wrapper">
     <a href="/cart" class="route-link">
       <div class="right-header">
         <div class="cart-box">
@@ -75,7 +75,4 @@
     xhttp.send();
     window.location.reload();
   }
-
-
-
 </script>
