--- a/src/resources/scss/app.scss
+++ b/src/resources/scss/app.scss
@@ -302,7 +302,9 @@ body {
 .slider img {
   flex: 1 0 100%;
   object-fit: cover;
-  animation: slide 16s infinite;
+  animation-name: slide;
+  animation-duration: 16s;
+  animation-iteration-count: infinite;
 }
 
 @keyframes slide {
@@ -671,10 +673,30 @@ body {
   visibility: visible;
 }
 
-.action-button {
+.action-buttons {
   position: absolute;
   display: flex;
-  flex-direction: column;
+  flex-direction: column;  
+  overflow: hidden;
+}
+
+.animate {
+  border: 0;
+  margin-top: 15px;
+  font-size: 15px;
+  padding: 10px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: red;
+  color: white;
+  visibility: collapse;
+  transform: translateX(-50px);
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+}
+
+.list-box:hover .animate {
+  transform: translateX(0);
+  visibility: visible;
 }
 
 .fun-fact {
@@ -741,7 +763,7 @@ body {
   top: 20px;
   width: 30px;
   height: 30px;
-  background: black;
+  background-color: black;
   color: white;
   font-size: 25px;
   font-weight: 600;
@@ -762,7 +784,6 @@ body {
 
 .popUp-wrapper {
   display: flex;
-  
 }
 
 .popUp-wrapper .img {
@@ -966,4 +987,74 @@ input {
 .subtotal-checkout .total {
   font-weight: 500;
   font-size: 25px;
+}
+
+//Supplement Page
+
+.brand-container {
+  background-color: white;
+  margin: 0 50px;
+  padding: 50px;
+}
+
+//ultility classes
+.flex {
+  display: flex;
+}
+
+.flex-spaceout {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.justify-center {
+  display: flex;
+  justify-content: center;
+}
+
+.Impact-25 {
+  font-size: 25px;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.segoeUI-15 {
+  font-size: 15px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.marginY-10 {
+  margin: 10px 0;
+}
+// ------------- 
+.brand .box {
+  height: 400px;
+  background-color: whitesmoke;
+  margin: 20px 0;
+}
+
+.brand img {
+  max-width: 300px;
+  object-fit: fill;
+}
+
+.box img {
+  max-width: 300px;
+  max-height: 300px;
+  object-fit: contain;
+}
+
+// .EVLutionNutrition .box {
+//   background-color: #0082ca;
+// }
+
+// .MuscleTech .box {
+//   background-color: #53378b;
+// }
+
+// .MUTANT .box {
+//   background-color: black;
+// }
+
+.checked-Evl-N {
+  color: #0082ca;
 }
