--- a/src/resources/views/partials/navigation.hbs
+++ b/src/resources/views/partials/navigation.hbs
@@ -13,16 +13,13 @@
       <span>DANH MỤC SẢN PHẨM</span>
     </div>
     <ul class="dropdown-list">
-      <a href="/shop" class="route-link">
+      <a href="/equipment" class="route-link">
         <li>Dụng cụ tập luyện</li>
       </a>
 
-
-      <li class="route-link">Thực phẩm thể hình</li>
-
-
-      <li class="route-link">Workout Program</li>
-
+      <a href="/supplement" class="route-link">
+        <li class="route-link" >Thực phẩm thể hình</li>
+      </a>
 
       <li class="route-link">Quần áo</li>
 
