--- a/src/resources/views/partials/navigation.hbs
+++ b/src/resources/views/partials/navigation.hbs
@@ -18,10 +18,10 @@
       </a>
 
       <a href="/supplement" class="route-link">
-        <li class="route-link" >Thực phẩm thể hình</li>
+        <li>Thực phẩm thể hình</li>
       </a>
 
-      <li class="route-link">Quần áo</li>
+      <li>Quần áo</li>
 
     </ul>
   </div>
